# physbam-cmake

./: CMakeLists.txt  README.md  example.cpp
Modules/: FindPhysBAM.cmake
PhysBAM/: CMakeLists.txt
